# Lore_Forge

./: .env.example  .gitignore  CLAUDE.md  FOLLOWUPS.md  README.md  package-lock.json  package.json
.claude/: settings.json
.claude/hooks/: session-start.sh
.github/workflows/: ci.yml  desktop-build.yml
backend/: main.py  pyproject.toml  requirements-build.txt  requirements.txt  sidecar.py  sidecar.spec
backend/app/: clock.py  config.py  context.py  db.py  db_url.py  migrations.py  observability.py  paths.py  profile_cli.py  scheduler.py  scoring.py  seed.py
db/: alembic.ini  env.py
db/versions/: 0001_initial.py  0002_structured_pipeline.py  0003_jobs.py  0004_cost_records.py  0005_render_metadata.py  0005_series_and_formats.py  0006_series_and_formats.py  0007_image_asset_cache.py  0008_book_dossier.py  0009_profiles.py  0010_content_items.py  0011_cta_links.py  0012_books_prompts.py  0013_reconcile_scene_prompts.py  0014_prompt_variables.py  0015_parameterize_books_prompts.py
docs/: CHEAP_HOSTING.md  HANDOFF.md  SESSION_SUMMARY.md  desktop-build.md  handoff-2026-04-19.md  handoff-2026-04-20.md  parallel-claude-handoff-a6.md  series-formats-plan.md
frontend/: next.config.js  package-lock.json  package.json  tailwind.config.ts
remotion/: README.md  package-lock.json  package.json  remotion.config.ts  tsconfig.json
scripts/: build_sidecar.sh  setup_env.sh
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md  icon.icns
src-tauri/src/: main.rs
tests/: conftest.py  pytest.ini
(+147 files in other folders)
